--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <!-- "X" Reset Button -->
     <a href="/" class="reset-btn">X</a>
     
-    <h1>Select User Type</h1>
+    <h1>Are you a student or staff?</h1>
     <form action="/name" method="POST">
         <button name="user_type" value="Student">Student</button>
         <button name="user_type" value="Staff">Staff</button>
