--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -71,7 +71,7 @@
 
         <!-- Reason Field (hidden initially) -->
         <div id="reason-field">
-            <h3>Reason for Signing Out (Students Only)</h3>
+            <h3>Reason for Signing Out</h3>
 
             <!-- Loop through the reasons and render them as buttons -->
             {% for reason in reasons %}
