--- a/static/styles.css
+++ b/static/styles.css
@@ -38,8 +38,20 @@ button:hover {
     background-color: #bb4547; /* Slightly darker red on hover */
 }
 
+/* Textfield styles */
 input[type="text"] {
-    text-align: center;
+    color: #bb2023;
+    border: 2px solid #bb2023;  /* Red outline */
+    background-color: white;  /* White background */
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 100%;
+}
+
+input[type="text"]:focus {
+    outline: none;
+    box-shadow: 0 0 5px red;
 }
 
 /* Reset button styling */
