clean up success text

--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -10,7 +10,7 @@
 <body onload="redirectToHome()">
     <div class="confirmation-body">
         <div class="confirmation-message">
-            Submission Successful!<br>
+            {{ name }} has successfully {{ action_text }}!<br>
         </div>
     </div>
 </body>
