--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submission Successful</title>
+
+    <!-- Link to external stylesheet -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
+    <!-- Link to external JS scripts -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </head>
 <body onload="redirectToHome()">
