--- a/templates/name.html
+++ b/templates/name.html
@@ -23,6 +23,7 @@
     <h1>Enter Your Name</h1>
     <form action="/signinout" method="POST">
         <input type="hidden" name="user_type" value="{{ user_type }}">
+        <input type="hidden" name="grade" value="{{ grade }}">  <!-- Add the grade field if applicable -->
         <input type="text" id="name-input" name="name" placeholder="Your name" style="width:100%; height:50px;" required>
         <button type="submit" style="width:100%; height:100px;">Next</button>
     </form>
