--- a/templates/grade.html
+++ b/templates/grade.html
@@ -12,9 +12,11 @@
 
     <h1>Select Your Grade</h1>
     <form action="{{ url_for('main.grade') }}" method="POST">
-        {% for grade in grades %}
-            <button type="submit" name="grade" value="{{ grade }}" class="grade-btn">{{ grade }}</button>
-        {% endfor %}
+        <div class="grid-container">
+            {% for grade in grades %}
+                <button type="submit" name="grade" value="{{ grade }}" class="grade-btn">{{ grade }}</button>
+            {% endfor %}
+        </div>
     </form>
 </body>
 </html>
