basic visitor functionality

--- a/static/styles.css
+++ b/static/styles.css
@@ -85,6 +85,10 @@ input[type="text"]:focus {
     display: none;
 }
 
+#visitor-reason {
+    display: none;
+}
+
 #action-buttons {
     display: block;
 }
