--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -40,6 +40,14 @@
             <label>Other reason:</label>
             <input type="text" id="other-reason-input" name="other_reason" placeholder="Enter your reason" onkeydown="submitOnEnter(event)">
         </div>
+
+        <!-- Reason Field For Visitors (also hidden initially) -->
+        <div id="visitor-reason">
+            <h3>Welcome to Brockton School</h3>
+            <br>
+            <label>Please enter the reason for your visit:</label>
+            <input type="text" id="other-reason-input" name="visitor-reason" placeholder="Enter your reason" onkeydown="submitOnEnter(event)">
+        </div>
     </form>
 </body>
 </html>
