--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     <form action="/name" method="POST">
         <button name="user_type" value="Student">Student</button>
         <button name="user_type" value="Staff">Staff</button>
+        <button type="submit" name="user_type" value="Visitor" class="user-btn">Visitor</button>
     </form>
 </body>
 </html>
