--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -15,7 +15,7 @@
 <body onload="redirectToHome()">
     <div class="confirmation-body">
         <div class="confirmation-message">
-            {{ name }} has successfully {{ action_text }}!<br>
+            {{ confirmation_text }}!<br>
         </div>
     </div>
 </body>
