--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -13,13 +13,16 @@
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </head>
 <body>
-    <h1>Sign In or Sign Out</h1>
+    <h1 id="sign-in-out-header">Sign In or Sign Out</h1>
     <form id="signForm" action="/submit" method="POST">
         <input type="hidden" name="name" value="{{ name }}">
         <input type="hidden" name="user_type" value="{{ user_type }}">
         <input type="hidden" id="action-input" name="action" value="">
         <input type="hidden" id="reason-input" name="reason" value="">
         <input type="hidden" name="grade" value="{{ grade }}">  <!-- Add the grade field if applicable -->
+
+        <!-- "X" Reset Button -->
+        <a href="/" class="reset-btn">X</a>
 
         <!-- Sign In / Sign Out buttons -->
         <div id="action-buttons">
@@ -43,7 +46,7 @@
 
         <!-- Reason Field For Visitors (also hidden initially) -->
         <div id="visitor-reason">
-            <h3>Welcome to Brockton School</h3>
+            <h1>Welcome to Brockton School</h1>
             <br>
             <label>Please enter the reason for your visit:</label>
             <input type="text" id="other-reason-input" name="visitor-reason" placeholder="Enter your reason" onkeydown="submitOnEnter(event)">
