--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -49,7 +49,10 @@
             <h1>Welcome to Brockton School</h1>
             <br>
             <label>Please enter the reason for your visit:</label>
-            <input type="text" id="other-reason-input" name="visitor-reason" placeholder="Enter your reason" onkeydown="submitOnEnter(event)">
+            <input type="text" id="visitor-reason-input" name="visitor-reason" placeholder="Enter your reason">
+            <br>
+            <label>Please provide you phone number:</label>
+            <input type="text" id="visitor-phone-input" name="visitor-phone" placeholder="Enter your phone number" onkeydown="submitOnEnter(event)">
         </div>
     </form>
 </body>
