add colour highlight for visitors and updated form text

--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -51,7 +51,7 @@
             <label>Please enter the reason for your visit:</label>
             <input type="text" id="visitor-reason-input" name="visitor-reason" placeholder="Enter your reason">
             <br>
-            <label>Please provide you phone number:</label>
+            <label>And provide you phone number:</label>
             <input type="text" id="visitor-phone-input" name="visitor-phone" placeholder="Enter your phone number" onkeydown="submitOnEnter(event)">
         </div>
     </form>
