--- a/static/styles.css
+++ b/static/styles.css
@@ -145,3 +145,34 @@ input[type="text"]:focus {
     padding: 10px;
     box-sizing: border-box;
 }
+
+/* Styles for Autocomplete */
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    /* Position the autocomplete items to be below the input field */
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+
+.autocomplete-item {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+}
+
+/* When hovering over an item */
+.autocomplete-item:hover {
+    background-color: #e9e9e9;
+}
+
+/* When an item is selected */
+.autocomplete-item.active {
+    background-color: #1e90ff;
+    color: #fff;
+}
