--- a/templates/name.html
+++ b/templates/name.html
@@ -8,6 +8,7 @@
     <!-- Link to external stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="{{ url_for('static', filename='autocomplete.js') }}"></script>  <!-- Add JS file for autocomplete -->
 
     <!-- Make text field focused by default -->
     <script>
@@ -20,12 +21,18 @@
     <!-- "X" Reset Button -->
     <a href="/" class="reset-btn">X</a>
     
-    <h1>Enter Your Name</h1>
+    <h1>Please Enter Your Name</h1>
     <form action="/signinout" method="POST">
         <input type="hidden" name="user_type" value="{{ user_type }}">
-        <input type="hidden" name="grade" value="{{ grade }}">  <!-- Add the grade field if applicable -->
-        <input type="text" id="name-input" name="name" placeholder="Your name" style="width:100%; height:50px;" required>
-        <button type="submit" style="width:100%; height:100px;">Next</button>
+        {% if grade %}
+        <input type="hidden" name="grade" value="{{ grade }}">
+        {% endif %}
+        
+        <label for="name">Name:</label>
+        <input type="text" id="name-input" name="name" required oninput="fetchSuggestions('{{ user_type }}', '{{ grade|default('') }}')">
+        <div id="autocomplete-list" class="autocomplete-items"></div>
+
+        <button type="submit">Next</button>
     </form>
 </body>
 </html>
