fix autocomplete layout

--- a/templates/name.html
+++ b/templates/name.html
@@ -28,7 +28,8 @@
         <input type="hidden" name="grade" value="{{ grade }}">
         {% endif %}
         
-        <label for="name">Begin typing your name and select from the list:</label>
+        <label for="guest-name">Begin typing your name and select from the list:</label>
+
         <!-- Container for input and autocomplete suggestions -->
         <div class="autocomplete-container">
             <input type="text" id="name-input" name="guest-name" required oninput="fetchSuggestions('{{ user_type }}', '{{ grade|default('') }}')" autocomplete="off">
