widen grid for student names

--- a/templates/student_name.html
+++ b/templates/student_name.html
@@ -11,7 +11,7 @@
     <a href="/" class="reset-btn">X</a>
 
     <h1>Select Your Name</h1>
-    <form action="/signinout" method="POST">
+    <form class="student-name-form" action="/signinout" method="POST">
         <input type="hidden" name="user_type" value="{{ user_type }}">
         <input type="hidden" name="grade" value="{{ grade }}">
         <input type="hidden" name="guest-name" id="student-name-input">  <!-- Hidden input to store selected name -->
