--- a/templates/name.html
+++ b/templates/name.html
@@ -37,7 +37,7 @@
         </div>
 
         <!-- Submit button placed below the suggestions -->
-        <button type="submit">Next</button>
+        <button hidden type="submit">Next</button>
     </form>
 </body>
 </html>
