fix some verbiage

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Are you a student or staff?</h1>
+    <h1>Please select most applicable.</h1>
     <form action="/name" method="POST">
         <button name="user_type" value="Student">Student</button>
         <button name="user_type" value="Staff">Staff</button>
