--- a/templates/index.html
+++ b/templates/index.html
@@ -16,5 +16,8 @@
         <button name="user_type" value="Staff">Staff</button>
         <button name="user_type" value="Visitor">Visitor</button>
     </form>
+
+    <!-- Include the footer with git info -->
+    {% include 'footer.html' %}
 </body>
 </html>
