--- a/templates/name.html
+++ b/templates/name.html
@@ -13,7 +13,7 @@
     <!-- Make text field focused by default -->
     <script>
         window.onload = function() {
-            document.getElementById("name-input").focus();
+            setupNamePage();
         };
     </script>
 </head>
@@ -23,12 +23,12 @@
     
     <h1>Please Enter Your Name</h1>
     <form action="/signinout" method="POST">
-        <input type="hidden" name="user_type" value="{{ user_type }}">
+        <input type="hidden" id="user-type-input" name="user_type" value="{{ user_type }}">
         {% if grade %}
         <input type="hidden" name="grade" value="{{ grade }}">
         {% endif %}
         
-        <label for="guest-name">Begin typing your name and select from the list:</label>
+        <label id="name-input-label" for="guest-name">Begin typing your name and select from the list:</label>
 
         <!-- Container for input and autocomplete suggestions -->
         <div class="autocomplete-container">
@@ -37,7 +37,7 @@
         </div>
 
         <!-- Submit button placed below the suggestions -->
-        <button hidden type="submit">Next</button>
+        <button hidden id="name-submit-btn" type="submit">Next</button>
     </form>
 </body>
 </html>
