--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -37,14 +37,15 @@
         <div id="reason-field">
             <h3 id="reason-header">Reason for Signing Out</h3>
 
+            <!-- Ask for manual reason first then provide drop down for presets -->
+            <label>Please enter your reason for signing out:</label>
+            <input type="text" id="other-reason-input" name="other_reason" placeholder="Enter your reason" onkeydown="submitOnEnter(event)">
+
             <!-- Loop through the reasons and render them as buttons -->
+            <h3>Or select a reason from below:</h3>
             {% for reason in reasons %}
                 <button type="button" class="reason-btn" onclick="setReason('{{ reason }}')">{{ reason }}</button>
             {% endfor %}
-            
-            <br>
-            <label>Other reason:</label>
-            <input type="text" id="other-reason-input" name="other_reason" placeholder="Enter your reason" onkeydown="submitOnEnter(event)">
         </div>
 
         <!-- Reason Field For Visitors (also hidden initially) -->
@@ -54,25 +55,30 @@
             <label>Please enter the reason for your visit:</label>
             <input type="text" id="visitor-reason-input" name="visitor-reason" placeholder="Enter your reason">
             <br>
-            <label>And provide you phone number:</label>
+            <label>Organization affiliation (if applicable):</label>
+            <input type="text" id="visitor-affilitaion-input" name="visitor-affiliation" placeholder="Enter your reason">
+            <br>
+            <label>And provide your phone number:</label>
             <input type="text" id="visitor-phone-input" name="visitor-phone" placeholder="Enter your phone number" onkeydown="submitVisitorOnEnter(event)">
         </div>
 
         <!-- Expected Return Time -->
          <div id="return-time">
-            <h3>Please provide your estimated time of return.</h3>
+            <h3>Are you returning?</h3>
 
             <!-- Buttons for quick time selection -->
             <div class="time-buttons">
-                <button type="button" onclick="selectReturnTime('None')">None</button>
-                <button type="button" onclick="selectReturnTime('30min')">30min</button>
+                <button type="button" onclick="selectReturnTime('None')">Not returning</button>
+                <!-- <button type="button" onclick="selectReturnTime('30min')">30min</button>
                 <button type="button" onclick="selectReturnTime('1 Hour')">1 Hour</button>
-                <button type="button" onclick="selectReturnTime('2 Hours')">2 Hours</button>
+                <button type="button" onclick="selectReturnTime('2 Hours')">2 Hours</button> -->
             </div>
+
+            <!-- Are you returning? No or select return time -->
 
             <!-- Custom time input field -->
             <div>
-                <label for="custom-time">Or Select Custom Time:</label>
+                <label for="custom-time">Please provide your return time:</label>
                 <input type="time" id="custom-time" name="custom_time" class="custom-time-input" onchange="selectCustomTime(this.value)">
                 <button type="submit">Submit</button>
             </div>
