--- a/static/styles.css
+++ b/static/styles.css
@@ -110,6 +110,7 @@ input[type="text"]:focus {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
     background-color: white;
     font-family: 'Nunito Sans', sans-serif;
