--- a/templates/config.html
+++ b/templates/config.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brockton Sign In Tool COnfiguration</title>
+    <title>Brockton Sign In Tool Configuration</title>
     <!-- Link to external stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='config-styles.css') }}">
