add git version as a text file in the package to simplify build

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
     <p>&copy; 2024 Brockton School</p>
-    <p>Build Version: {{ version_tag }} ({{ commit_hash }})</p>
+    <p>{{version_text}}</p>
 </footer>
