--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -84,5 +84,12 @@
             </div>
          </div>
     </form>
+
+
+    <!-- Add this to your HTML where appropriate -->
+    <div id="loading-indicator" style="display: none; text-align: center; margin-top: 20px;">
+        <p>Submitting...</p>
+        <div class="spinner"></div>
+    </div>
 </body>
 </html>
