request visitor license plate

--- a/templates/signinout.html
+++ b/templates/signinout.html
@@ -59,7 +59,10 @@
             <label>Organization affiliation (if applicable):</label>
             <input type="text" id="visitor-affilitaion-input" name="visitor-affiliation" placeholder="Enter your reason">
             <br>
-            <label>And provide your phone number:</label>
+            <label>License Plate (if applicable):</label>
+            <input type="text" id="visitor-vehicle-input" name="visitor-vehicle" placeholder="AA0 000A">
+            <br>
+            <label>Contact Phone Number:</label>
             <input type="text" id="visitor-phone-input" name="visitor-phone" placeholder="(604) 123-4567" pattern="^\(\d{3}\) \d{3}-\d{4}$" title="Phone number must be in the format: (123) 456-7890" onkeydown="submitVisitorOnEnter(event)">
         </div>
 
